# Les11_Task3

./: .gitignore  CMakeLists.txt  README.md  Я соберу проект  под Linux.sh  Я соберу проект под Windows.cmd
DynamicLibrory/: Leaver.cpp  Leaver.h
MyProgramm/: MyProgramm.cpp
